Remove calc button image and update launch configurations in VSCode; enhance ClaudeEducationalChatbot with improved button text and URI handling, and adjust StockCalculatorDialog size and scroll behavior for better user experience.